fix: update spacing

--- a/src/Subscriptions/resources/admin/components/SubscriptionSyncList/styles.module.scss
+++ b/src/Subscriptions/resources/admin/components/SubscriptionSyncList/styles.module.scss
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     gap: var(--givewp-spacing-2);
-    padding: var(--givewp-spacing-3);
 }
 
 .item {
@@ -13,6 +12,10 @@
     padding: var(--givewp-spacing-3) var(--givewp-spacing-4);
     border: solid 1px #e5e7eb;
     border-radius: 8px;
+
+    &:last-child {
+        margin-bottom: var(--givewp-spacing-4);
+    }
 }
 
 .itemContent {
